--- a/comm.css
+++ b/comm.css
@@ -117,15 +117,20 @@
     transform: translateX(5px);
 }
 .emplayees-page .person-details .about-me .icons1{
-    width: 80px;
+    width: 70px;
     border-radius: 0;
     text-align: center;
-    translate: 220px -25px;
+    translate: 225px -25px;
+    display: flex;
+    justify-content: space-between;
 }
 .emplayees-page .person-details .about-me .icons1 a i{
-    color: #1b1bff;
-    scale: 1.9;
+    color: #fff;
+    background-color: #1b1bff;
+    border-radius: 50%;
     padding: 5px;
+    scale: 1.4;
+    gap: 10px;
 }
 .emplayees-page .person-details .about-me .icons1 #i2{
     background-color: #1b1bff;
