--- a/comm.css
+++ b/comm.css
@@ -11,6 +11,9 @@
     font-weight: 450;
     text-align: center;
     padding: 15px;
+    &::first-letter{
+        color: #1b1bff; 
+    }
 }
 .container ul li{
     list-style: none;
@@ -375,13 +378,32 @@
     translate: -67px 0;
     font-weight: 450;
 }
-
-
+/* Premium Box */
 .emplayees-page .premiumbox{
     grid-area: premiumbox;
-    background-color: #fff;
+    background: rgb(73,255,106);
+    background: linear-gradient(-30deg, rgba(73,255,106,1) 0%, rgba(54,236,135,1) 0%, rgba(42,224,154,1) 16%, #23d9a5 31%, #009bff 100%);
     height: 250px;
+    padding: 20px;
+    color: #fff;
 }
+.emplayees-page .premiumbox .headbox{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.emplayees-page .premiumbox .users{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    translate: 0 10px;
+}
+.emplayees-page .premiumbox img{
+    translate: calc(var(--i) * -13px);
+}
+
+
+
 .emplayees-page .working-format{
     grid-area: workingformat;
     background-color: #fff;
